Fix thin col on mobile

--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -114,6 +114,7 @@ img {
 }
 
 .column.thin {
-  max-width: 368px;
+  max-width: 372px;
+  padding: 0 14px;
   margin: 0 auto;
 }
